Add java debug settings and move AverageLevelsInBinaryTree to CPfor100Days package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": [
         "SolvedProblems"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
