--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "java.project.sourcePaths": ["SolvedProblems"],
-  "java.debug.settings.onBuildFailureProceed": true
+  "java.debug.settings.onBuildFailureProceed": true,
+  "java.debug.settings.showStaticVariables": false,
+  "java.debug.settings.showQualifiedNames": false,
+  "java.debug.settings.showHex": false
 }
